<resources>
    <string name="app_name">MUSAP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Keystore List</string>
    <string name="title_notifications">Key Generation</string>
    <string name="title_sign">Sign</string>
    <string name="title_keystore_list">Keystore List</string>
    <string name="title_keystore_details">Keystore Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="methicsdemo_keygen_enter_msisdn">Enter MSISDN</string>

</resources>