<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fi.methics.musap.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_keystore_list"
        android:name="fi.methics.musap.ui.list.SscdListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_sscd" >
        <action
            android:id="@+id/action_keystoreFragment_to_keystoreDetailsFragment"
            app:destination="@id/keystore_details_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_keygen"
        android:name="fi.methics.musap.ui.keygen.KeygenFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_keygen" />
    <fragment
        android:id="@+id/navigation_sign"
        android:name="fi.methics.musap.ui.sign.SignSscdSelectionFragment"
        android:label="@string/title_sign"
        tools:layout="@layout/fragment_sign" >
        <action
            android:id="@+id/action_navigation_sign_to_signMethodFragment"
            app:destination="@id/sign_sign_method_fragment" />
    </fragment>
    <fragment
        android:id="@+id/sign_sign_method_fragment"
        android:name="fi.methics.musap.ui.sign.SignMethodFragment"
        android:label="@string/title_keystore_list"
        tools:layout="@layout/fragment_sign_method_list" >
        <action
            android:id="@+id/action_signMethodFragment_to_androidKeystoreSignFragment"
            app:destination="@id/signingFragment" />
    </fragment>
    <fragment
        android:id="@+id/signingFragment"
        android:name="fi.methics.musap.ui.sign.SigningFragment"
        android:label="fragment_android_keystore_sign"
        tools:layout="@layout/fragment_android_keystore_sign" />

    <fragment
        android:id="@+id/keystore_details_fragment"
        android:label="@string/title_keystore_details"
        android:name="fi.methics.musap.ui.list.EnabledSscdDetailsFragment"/>

</navigation>